# DMR

./: .gitignore  CMakeLists.txt  convert_stl_to_obj.py  install.sh  readme.md
demo/: 6D_POSE_GUIDE.md  ADAPTIVE_SEGMENTATION_FIX.md  FINAL_CLEANUP.sh  FINAL_COMPREHENSIVE_REPORT.md  FINAL_SOLUTION_SUMMARY.md  HYBRID_QUICKREF.md  HYBRID_STRATEGY_REPORT.md  INDUSTRIAL_INTERFACE_GUIDE.md  INDUSTRIAL_PRECISION_GUIDE.md  LINE_TRAJECTORY_FINAL_SOLUTION.md  MOTIONLIMITS_FIX_REPORT.md  MOVETO_USAGE.md  OPTIMIZATION_STATUS_REPORT.md  PATH_QUICKREF.md  PATH_SETUP.md  ROBOT_CAPABILITY_VS_ALGORITHM.md  RPY_INDUSTRIAL_GUIDE.md  build_cosim_demo.sh  demo_drake_mujoco_cosim.cpp  demo_drake_mujoco_cosim_refactored.cpp  run_cosim_demo.sh  testActiontestli3.json  trajectory_moveL_pose.csv  trajectory_moveL_pose.json  trajectory_moveL_pose12.json
docs/: CODE_REFACTORING_GUIDE.md  QUICK_OPTIMIZATION_REFERENCE.md
model/nezha/: README.md
model/nezha/scene/: nezha.xml  scene.xml
model/nezha/urdf/: robot_arm.urdf
